--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,7 +13,8 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
+          <td>
+            <%= link_to(@book.user) do %>
             <%= image_tag @book.user.get_profile_image %><br>
             <%= @book.user.name %>
             <% end %>
@@ -24,8 +25,43 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+                ♥<%= @book.favorites.count %>
+              <% end %>
+            </td>
+            <% else %>
+            <td>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+                ♡<%= @book.favorites.count %>
+              <% end %>
+            </td>
+          <% end %>
+
+          <td>コメント数:<%= @book.book_comments.count %></td>
         </tr>
       </table>
+      <table>
+        <tr>
+          <% @book_comments.each do |book_comment| %>
+            <td>
+              <%= image_tag book_comment.user.get_profile_image %><br>
+              <%= book_comment.user.name %>
+            </td>
+            <td><%= book_comment.comment %></td>
+          <% end %>
+          <% if current_user.id == @book.id %>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% end %>
+        </tr>
+      </table>
+      <div>
+        <%= form_with model: [@book,@book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
