--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -9,6 +9,33 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th>
+      <%= link_to user_followings_path(user.id) do %>
+        <%= user.followings.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th>
+      <%= link_to user_followers_path(user.id) do %>
+        <%= user.followers.count %>
+      <% end %>
+    </th>
+  </tr>
+  <tr>
+    <th>
+      <% if current_user.id != user.id %>
+        <% if current_user.following?(user) %>
+          <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %>
+        <% else %>
+          <%= link_to "フォローする", user_relationships_path(user.id), method: :post %>
+        <% end %>
+      <% end %>
+    </th>
+  </tr>
 </table>
 
 <div class='row'>
