--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render 'layouts/header' %>
       <main>
+        <%= render 'layouts/search' %>
         <p id="notice"></p>
         <%= yield %>
       </main>
